[gd_scene load_steps=2 format=2]

[ext_resource path="res://demos/utility_test.gd" type="Script" id=1]

[node name="UtilityTest" type="Node2D"]
script = ExtResource( 1 )

[node name="Poly" type="Polygon2D" parent="."]

[node name="Poly2" type="Polygon2D" parent="."]

[node name="Poly3" type="Polygon2D" parent="."]

[node name="Poly4" type="Polygon2D" parent="."]

[node name="Poly5" type="Polygon2D" parent="."]

[node name="Poly6" type="Polygon2D" parent="."]

